--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "jspdf-autotable": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.451.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^7.4.0",
